# web-development-learning

./: .editorconfig  .gitignore  README.md  flake.nix
.github/workflows/: pages.yml
online-test/: .env  Cargo.toml  diesel.toml  index.html  login.html  result.html  test.html
online-test/backend/: generate.asp  login.asp  submit.asp
online-test/migrations/2024-09-11-092450_create_questions/: up.sql
online-test/migrations/2024-09-11-093456_create_scores/: up.sql
online-test/scripts/: login.js  result.js  test.js
online-test/src/: lib.rs  main.rs
online-test/src/cli/: add.rs  list.rs  mod.rs  remove.rs
online-test/src/domain/: application.rs  mod.rs
online-test/src/domain/entity/: answer.rs  id.rs  mod.rs  question.rs  score.rs  test.rs  user.rs
online-test/src/domain/repository/: mod.rs  question.rs  score.rs
online-test/src/domain/session/: base.rs  login.rs  mod.rs  test.rs
online-test/src/inbound/: error.rs  mod.rs  server.rs
online-test/src/inbound/handler/: login.rs  mod.rs  query.rs  start.rs  submit.rs
online-test/src/repository/: connection.rs  mod.rs  question.rs  schema.rs  score.rs
online-test/static/: index.html  login.html  result.html  statistics.html  test.html
online-test/static/scripts/: login.js  result.js  statistics.js  test.js
online-test/static/styles/: common.css  result.css  statistics.css  test.css
online-test/static/styles/components/: button.css
online-test/static/styles/layouts/: card.css
online-test/styles/: common.css  index.css  login.css  navigation.css  result.css  test.css
online-test/styles/component/: input.css  main.css  selection.css
online-test/styles/components/: input.css  selection.css
online-test/styles/layout/: question.css
online-test/styles/layouts/: question.css
profile/: index.html
profile/styles/: common.css  cover.css  navigation.css  page-classes.css  page-emotions.css  page-movies.css  page-neighbors.css  return-top.css
