[package]
name = "online-test"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
axum = "0.7.5"
axum-macros = "0.4.1"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.5.0", features = ["deadpool", "sqlite", "tokio", "sync-connection-wrapper"] }
enum_dispatch = "0.3.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
snafu = "0.8.4"
tokio = { version = "1.40.0", features = ["full", "test-util"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
mockall = "0.13.0"
